# minitorch

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  replace.py
blog_drafts/: linkedin_post.md  matmul_cnn_intuition.md  performance_and_architecture.md
data-prep/: prep.py
demos/: CMakeLists.txt  sales_predictor_demo.cu
include/minitorch/: activations.cuh  layers.cuh  loss.cuh  matrix.cuh  memory_pool.cuh  module.hh  ops.cuh  ops_utils.cuh  optim.cuh  random.cuh  sequential.hh  tensor.cuh  utils.cuh
include/minitorch/conv/: conv1d.cuh  conv_utils.cuh
include/minitorch/initialisation/: init.cuh
src/: CMakeLists.txt  activations.cu  layers.cu  loss.cu  matrix.cu  memory_pool.cu  ops.cu  optim.cu  tensor.cu
src/conv/: conv1d.cu
tests/: CMakeLists.txt  forward.cu  test_matrix.cu  test_ops.cu  test_tensor.cu  test_xor.cu
