add_executable(test_matrix test_matrix.cu)
add_executable(test_ops test_ops.cu)
add_executable(test_forward forward.cu)
add_executable(test_xor test_xor.cu)
target_link_libraries(test_matrix PRIVATE minitorchlib)
target_link_libraries(test_ops PRIVATE minitorchlib)
target_link_libraries(test_forward PRIVATE minitorchlib)
target_link_libraries(test_xor PRIVATE minitorchlib)
